--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -273,10 +273,9 @@ ion-icon {
   visibility: visible;
 }
 
-
 .second-link:link,
 .second-link:visited {
-  font-size: 1.0rem;
+  font-size: 1rem;
   display: inline-block;
   color: #878787;
   text-decoration: none;
@@ -285,18 +284,42 @@ ion-icon {
 
 .second-link:hover,
 .second-link:active {
-  color: #31C27C;
+  color: #31c27c;
 }
 
-.second-link-flexbox{
+.second-link-flexbox {
   display: flex;
   gap: 2.4rem;
 }
-h1{
+h1 {
   font-size: 2.4rem;
   letter-spacing: 5px;
-  color:#000;
+  color: #000;
   font-weight: 500;
   margin-bottom: 0.8rem;
 }
 
+.dots {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, -100%);
+  display: flex;
+  gap: 1.6rem;
+}
+
+.dot {
+  width: 0.8rem;
+  height: 0.8rem;
+  border: none;
+  border-radius: 50%;
+  background-color: #e0e0e0;
+  cursor: pointer;
+  &:hover {
+    background-color: #afafaf;
+  }
+}
+
+.dot-select {
+  background-color: #afafaf;
+}
