--- a/src/components/Sections/SectionPlaylistRecommendation/local.module.scss
+++ b/src/components/Sections/SectionPlaylistRecommendation/local.module.scss
@@ -2,7 +2,7 @@
 /*歌单推荐 区*/
 /*************************************************/
 .section-playlist-recommendation {
-  background-color: #f7f7f7;
+  background-color: #fafafa;
   height: 35rem;
   display: flex;
   flex-direction: column;
