--- a/src/components/Sections/SectionRecommend/local.module.scss
+++ b/src/components/Sections/SectionRecommend/local.module.scss
@@ -1,11 +1,11 @@
-.section-new-song {
-  background-color: #fafafa;
+.section-recommend {
+  background-color: #f3f3f3;
   height: 40rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 1.6rem;
+  gap: 0.4rem;
   position: relative;
 }
 
@@ -47,10 +47,6 @@
   color: #878787;
 }
 
-.section-new-song-img {
-  height: 15rem;
-  transition: all 0.3s ease-out;
-}
 
 .song-name:link,
 .song-name:visited {
@@ -127,12 +123,12 @@
   opacity: 1;
 }
 
-.section-new-song-img {
-  height: 6.4rem;
+.section-recommend-img {
+  height: 20.9rem;
   transition: all 0.3s ease-out;
 }
 
-.img-container:hover .section-new-song-img {
+.img-container:hover .section-recommend-img {
   transform: scale(1.1);
 }
 
@@ -184,22 +180,20 @@
   height: 3.2rem;
 }
 
-.section-new-song:hover .left-btn {
+.section-recommend:hover .left-btn {
   transform: translate(0, -50%);
   opacity: 1;
 }
 
-.section-new-song:hover .right-btn {
+.section-recommend:hover .right-btn {
   transform: translate(0, -50%);
   opacity: 1;
 }
 
 .img-box-sub1 {
-  display: grid;
+  display: flex;
   gap: 1.4rem;
   transition: all 0.4s ease-out;
-  grid-template-rows: 1fr 1fr 1fr;
-  grid-auto-flow: column;
 }
 
 .img-box {
@@ -239,4 +233,26 @@
   color: #999999;
   height: 3.2rem;
   width: 3.2rem;
+}
+
+.classification{
+  display: inline-block;
+  padding: 0.5rem;
+  background-color: #fff;
+  color:#000;
+  border-radius: 0.2rem;
+  font-size: 0.8rem;
+}
+
+.figure-title{
+  position: absolute;
+  font-size: 1.0rem;
+  display: flex;
+  gap: 0.8rem;
+  align-items: center;
+  justify-content: center;
+  left: 0;
+  bottom: 0;
+  color:#fff;
+  transform: translate(6%, -50%);
 }
