--- a/src/components/Sections/SectionNewSong/local.module.scss
+++ b/src/components/Sections/SectionNewSong/local.module.scss
@@ -20,7 +20,7 @@
   width: 25rem;
 }
 
-.container {
+.img-container {
   grid-row: 1/3;
   grid-column: 1/2;
 }
@@ -98,6 +98,7 @@
 }
 
 .img-container {
+  width: 6.4rem;
   overflow: hidden;
   position: relative;
   cursor: pointer;
@@ -109,8 +110,8 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 3.6rem;
-  height: 3.6rem;
+  width: 1.4rem;
+  height: 1.4rem;
   border-radius: 50%;
   transform: translate(-50%, -50%);
   background-image: url("svg/cover_play.png");
@@ -121,8 +122,8 @@
 
 .img-container:hover::after {
   display: block;
-  width: 4.5rem;
-  height: 4.5rem;
+  width: 3.6rem;
+  height: 3.6rem;
   transform: translate(-50%, -50%);
   opacity: 1;
 }
